# opengl_shapes

./: .gitignore  CMakeLists.txt  README.md  compile_and_run.sh
include/: display.h  display.hpp  fps_logger.hpp  mesh.hpp  shader.h  shader.hpp  transform.hpp  value_limiter.hpp  vertex.hpp
script/: basic_shader.frag  basic_shader.vert  fps_plot.py
src/: display.cpp  fps_logger.cpp  main.cpp  mesh.cpp  shader.cpp  transform.cpp  value_limiter.cpp  vertex.cpp
